--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "stripe": "^16.5.0",
     "supertest": "^7.0.0"
   },
   "jest": {
