--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^29.5.12",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "stripe": "^16.5.0",
+    "stripe": "^16.5.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "supertest": "^7.0.0"
   },
   "jest": {
